--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <p class="end">Made with &hearts; by rakshixh</p>
+        <p class="end">Made with &hearts; by <a class="link" href="https://www.linkedin.com/in/rakshixh/">Rakshith Acharya</a></p>
     </div>
 </body>
 </html>
