--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <p style="text-align:center"><a class="end" href="https://www.linkedin.com/in/rakshixh/">Made with &hearts; by Rakshith Acharya</a></p>
+        <p style="text-align:center,margin:0px,background-color:transparent"><a class="end" href="https://www.linkedin.com/in/rakshixh/">Made with &hearts; by Rakshith Acharya</a></p>
     </div>
 </body>
 </html>
