--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <h1>Oasis Infobyte Projects</h1>
+        <h1>Oasis Infobyte Internship Projects</h1>
         <div class="card-container">
             <div class="card">
                 <div class="inside-card">
